--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "rehype-highlight": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "remark-toc": "^9.0.0",
+    "unified": "^11.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -21,8 +30,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "sass": "^1.77.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "sass": "^1.77.1"
+    "typescript": "^5"
   }
 }
