--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
     "remark-toc": "^9.0.0",
+    "remark-unwrap-images": "^4.0.0",
     "unified": "^11.0.4"
   },
   "devDependencies": {
