--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@remark-embedder/transformer-oembed": "^5.0.0",
     "dayjs": "^1.11.11",
     "gray-matter": "^4.0.3",
     "next": "14.2.3",
